# ToolsDNS

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  PLAN.md  README.md  SECURITY.md  deploy.sh  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_multi_agent_features.py  tooldns.sh
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: auto-label.yml  ci.yml  security.yml  stale.yml
tooldns/: __init__.py  api.py  auth.py  cache.py  caller.py  categories.py  cli.py  config.py  database.py  discover.py  embedder.py  fetcher.py  health.py  ingestion.py  integrate.py  marketplace.py  mcp_server.py  models.py  search.py  tokens.py  ui.py  workflows.py
tooldns/static/: style.css
tooldns/templates/: base.html  client_portal.html  dashboard.html  deploy.html  edit_source.html  health.html  keys.html  marketplace.html  new_skill.html  pricing.html  settings.html  sources.html  stats.html  tools.html
